# waxone23-VSCodeProjects

./: .gitignore  Add_markers_to_timeline.py  Auto_render_notification.py  Celcius to fahrenheit.py  Contact_list.py  Def & If combos.py  Detect_duplicate_photos.py  Grades.py  Lab 9.py  Legal_file_gatekeeper_mastersaver.py  Master_folder_grader_teal_orange.py  Panda_excersise.ipynb  Power_grade_organizer.py  PyMovie.ini  README.md  Run _tool_scripts_try.py  Search for Python related files.py  Tableof7  Titanic_passenger_datalist.ipynb  Try Studio_deployment_script.py  User_input_temprature_loop.py  akai_apc_40_mk2_control.py  analyze_drum_kit.py  analyze_hi_hat_typ.py  analyze_hi_hat_type.py  apply_cst_notes.py  auto_label_drums.py  auto_label_drums_v2.py  backup_results.sh  barcode_animation.py  check_setup.py  circles.py  clean_project.sh  config.py  contact_list_simplified.py  create_mpc_program.py  create_proxies.py  data_type_detective.py  davinci_resolve_script.py  def_square.py  (+41 more)
Lab 7 Python/: exceptions.py  import sqlite3.py  patient.py  test_patient.py  test_vehicle.py  vehicle.py
Oblig2 Python/health_app/: README.md  conftest.py  health_records.json  pyproject.toml
Oblig2 Python/health_app/src/health_app/: data.py  health.py  main.py
Oblig2 Python/health_app/src/health_app.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Oblig2 Python/health_app/tests/: test_data.py  test_health.py
Pydantic_Lab/: .gitignore  requirements.txt
data1300_files_lab/: .gitignore  add_students.py  buggy_grades.py  create_samples.py  export_ranked.py  math_utils.py  (+3 more)
(+48 files in other folders)
