[project]
name = "health-app"
version = "0.1.0"
description = "A health tracking application for BMI and statistics"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Brede Korsmo" }
]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/health_app"]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]